--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,14 +31,13 @@ jobs:
         draft: false
         prerelease: false
 
-    - name: Create Release and Upload Release Asset
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Create GitHub release
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-        tag_name: ${{ github.ref }}
-        name: Release ${{ github.ref }}
-        body: TODO New Release.
-        draft: false
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: ${{ env.ReleaseVersion }}
+        title: ${{ env.ReleaseVersion }}
         prerelease: false
         files: |
           ./dp
+
