--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,9 +34,9 @@ jobs:
     - name: Create GitHub release
       uses: marvinpinto/action-automatic-releases@latest
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: ${{ env.ReleaseVersion }}
-        title: ${{ env.ReleaseVersion }}
+        repo_token: "${{ secrets.TOKEN }}"
+        automatic_release_tag: Latest
+        title: Latest
         prerelease: false
         files: |
           ./dp
